[package]
name = "backshots"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
bytes = { version = "1.10.1", features = ["serde"] }
chrono = { version = "0.4.40", default-features = false, features = ["serde", "std"] }
futures-util = "0.3.31"
http-body-util = { version = "0.1.3", features = ["full"] }
hyper = { version = "1.6.0", features = ["full"] }
hyper-util = { version = "0.1.10", features = ["full", "tokio"] }
ipld-core = "0.4.2"
iroh-car = "0.5.1"
multibase = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_bytes = "0.11.17"
serde_ipld_dagcbor = "0.6.2"
sled = "0.34.7"
tokio = { version = "1.44.1", features = ["full"] }
tokio-rustls = "0.26.2"
tokio-tungstenite = { version = "0.26.2", features = ["rustls-tls-webpki-roots"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
webpki-roots = "0.26.8"
