[package]
name = "backshots"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
bytes = { version = "1.10.1", features = ["serde"] }
chrono = { version = "0.4.40", default-features = false, features = ["serde", "std"] }
futures-util = "0.3.31"
http-body-util = { version = "0.1.3", features = ["full"] }
hyper = { version = "1.6.0", features = ["full"] }
hyper-util = { version = "0.1.10", features = ["full", "tokio"] }
ipld-core = "0.4.2"
multibase = "0.9.1"
nix = { version = "0.29.0", features = ["fs", "uio"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_bytes = "0.11.17"
serde_ipld_dagcbor = "0.6.2"
sled = { version = "0.34.7", features = ["compression"] }
tinyjson = "2.5.1"
tokio = { version = "1.44.1", features = ["full"] }
tokio-rustls = "0.26.2"
tokio-tungstenite = { version = "0.26.2", features = ["rustls-tls-webpki-roots"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
unsigned-varint = "0.8.0"
webpki-roots = "0.26.8"
zerocopy = { version = "0.8.23", features = ["derive", "std"] }

[target.'cfg(target_os = "linux")'.dependencies]
sled = { version = "0.34.7", features = ["compression", "io_uring"] }
